--- a/mine-site/index.html
+++ b/mine-site/index.html
@@ -1,16 +1,14 @@
 ---
-title: Home
+title: 首页
 ---
 
-<h2>Welcome</h2>
+<h2></h2>
 
 <img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
 
-<p>Welcome to my blog!</p>
+<p>这里记录了我们在我的世界里面的点点滴滴, 并且可以一键到达相册里的景点或位置:</p>
 
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
-
-<h2>Posts</h2>
+<h2>历史记录</h2>
 $partial("templates/post-list.html")$
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p>… 更多内容请查看 <a href="/archive.html">归档</a>.</p>
